@@ -19,6 +19,7 @@
 package net.mcreator.workspace.settings;
 
 import com.google.common.base.CaseFormat;
+import net.mcreator.minecraft.api.ModAPIImplementation;
 import net.mcreator.minecraft.api.ModAPIManager;
 import net.mcreator.ui.MCreatorApplication;
 import net.mcreator.util.StringUtils;
@@ -170,8 +171,8 @@ import java.util.stream.Stream;
 
 	public Set<String> getRequiredMods() {
 		List<String> apisSupportedNames = ModAPIManager.getModAPIsForGenerator(
-						workspace.getGenerator().getGeneratorName()).stream().filter(e -> e.requiredWhenEnabled)
-				.map(e -> e.parent.id).collect(Collectors.toList());
+						workspace.getGenerator().getGeneratorName()).stream().filter(ModAPIImplementation::requiredWhenEnabled)
+				.map(e -> e.parent().id()).toList();
 
 		return Stream.concat(requiredMods.stream(), mcreatorDependencies.stream().filter(apisSupportedNames::contains))
 				.collect(Collectors.toSet());
@@ -179,8 +180,8 @@ import java.util.stream.Stream;
 
 	public Set<String> getDependencies() {
 		List<String> apisSupportedNames = ModAPIManager.getModAPIsForGenerator(
-						workspace.getGenerator().getGeneratorName()).stream().filter(e -> !e.requiredWhenEnabled)
-				.map(e -> e.parent.id).collect(Collectors.toList());
+						workspace.getGenerator().getGeneratorName()).stream().filter(e -> !e.requiredWhenEnabled())
+				.map(e -> e.parent().id()).toList();
 
 		return Stream.concat(dependencies.stream(), mcreatorDependencies.stream().filter(apisSupportedNames::contains))
 				.collect(Collectors.toSet());
@@ -192,8 +193,7 @@ import java.util.stream.Stream;
 
 	public Set<String> getMCreatorDependencies() {
 		List<String> apisSupportedNames = ModAPIManager.getModAPIsForGenerator(
-						workspace.getGenerator().getGeneratorName()).stream().map(e -> e.parent.id)
-				.collect(Collectors.toList());
+						workspace.getGenerator().getGeneratorName()).stream().map(e -> e.parent().id()).toList();
 		return mcreatorDependencies.stream().filter(apisSupportedNames::contains).collect(Collectors.toSet());
 	}
 
